--- a/style.css
+++ b/style.css
@@ -1,96 +1,307 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* Fondo oscuro para oscurecer el contenido detrás del popup */
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  overflow-y: auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.productos-container {
+  background-color: white;
+  display: flex;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.sidebar {
+  margin: 2%;
+  width: 15%;
+  background-color: #EDEDED;
+  padding: 20px;
+  border-radius: 30px;
   text-align: center;
+  align-content: center;
+  height: fit-content;
+  /* Added */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.section-button {
+  display: inline;
+  width: 90%;
+  margin-bottom: 20px;
+  border-radius: 40px;
+  border: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.section-button.selected {
+  box-shadow: 0 0 10px 0 #182440;
+}
+
+.sidebar.mob-hide {
+  position: absolute;
+  top: 0;
+  margin: 0;
+  border-radius: 0;
+  overflow: hidden;
+  display: inline-block;
+  flex-wrap: wrap;
+  position: fixed;
+  height: 100%;
+  left: -100%;
+  right: auto;
+  /* Mueve el navBar hacia la derecha de la pantalla */
+  width: 30%;
+  transition: left 0.7s ease-out, opacity 0.7s ease;
+}
+
+.sidebar.mob-show {
+  top: 0;
+  margin: 0;
+  border-radius: 0;
+  justify-content: center;
+  overflow: hidden;
+  display: inline-block;
+  flex-wrap: wrap;
+  position: fixed;
+  left: 0;
+  width: 30%;
+  height: 100%;
+  opacity: 0.99;
+  right: auto;
+  transition: left 0.7s ease, opacity 0.7s ease;
+}
+
+
+.main-content {
+  width: 80%;
+  margin: 2%;
+  border-radius: 20px;
+  background-color: #EDEDED;
+
+}
+
+.section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding: 20px;
+}
+
+.product-card {
+  width: calc(33.33% - 100px);
+  margin: 20px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.product-image {
+  width: 90%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.product-title {
+  font-family: 'Quicksand', sans-serif;
+  color: #182440;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.product-card:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.blue-horizontal-line {
+  margin: 20px;
+  height: 3px;
+  background-color: #21305D;
+  border: none;
+}
+
+
+
+.product-card-info {
+  border-radius: 20px;
+  padding: 10px;
+  text-align: center;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  margin: 0px 30px 20px 30px;
+  position: relative;
+}
+
+.product-card-image {
+  width: 30%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.product-info {
+  flex-grow: 1;
+  text-align: left;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.product-card-title {
+  font-family: 'Quicksand', sans-serif;
+  color: #182440;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.product-description {
+  font-family: 'Quicksand', sans-serif;
+  color: #182440;
+  font-weight: 500;
+  margin: 10px;
+  margin-right: 30px;
+}
+
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  border: none;
+  background-color: #21305D;
+  color: white;
+  cursor: pointer;
+}
+
+.toggle-container {
+  display: flex;
+  justify-content: left;
+  margin: 10px;
+
+}
+
+.toggle-close-container {
+  position: relative;
+  top: 0px;
+  display: flex;
+  justify-content: right;
+}
+
+.toggle-sidebar {
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: #21305D;
+  text-align: left;
+  margin-left: 20px;
+}
+
+@media (max-width: 1000px) {
+
+  .blue-horizontal-line {
+    margin-top: 0;
   }
-  a:hover {
-    color: #747bff;
+
+  .main-content {
+    width: 90%;
+    margin: 2% auto;
+    /* Center the element horizontally */
+    border-radius: 20px;
+    background-color: #EDEDED;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .product-card {
+    margin: 2% auto;
+    width: calc(50% - 70px);
   }
+
+  .product-title {
+    font-size: 15px;
+    margin: 5px 0;
+  }
+
+
+  .section-button {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  } 
+
+  .product-card-info {
+    max-height: 80%; /* Límite máximo de altura */
+    overflow-y: auto; /* Permite el desplazamiento interno si el contenido es demasiado grande */
+    border-radius: 20px;
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+    display: flex;
+    flex-direction: column; /* Alinear elementos internos en columna */
+    align-items: center; /* Centrar elementos internos horizontalmente */
+    margin: auto; /* Centrar el popup verticalmente */
+    position: relative;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .product-card-image {
+    width: 70%;
+    /* Ajuste del ancho de la imagen */
+    object-fit: cover;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    /* Ajuste del margen inferior */
+  }
+
+  .product-info {
+    flex-grow: 1;
+    text-align: left;
+    /* Modificación */
+    padding: 0 20px;
+    /* Ajuste del relleno */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .product-card-title {
+    font-family: 'Quicksand', sans-serif;
+    color: #182440;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px;
+  }
+
+  .product-description {
+    font-family: 'Quicksand', sans-serif;
+    color: #182440;
+    font-weight: 500;
+    margin: 10px;
+  }
+
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    background-color: #21305D;
+    color: white;
+    cursor: pointer;
+  }
+
 }
